@@ -15,11 +15,13 @@ import javax.validation.Valid;
 import java.time.LocalDate;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/schedule")
 public class ScheduleController {
+
+    static final String MESSAGE = "successfully retrieved all schedules searched by departure: ";
+    static final String WARN = "Flight not found. Please choose another schedule.";
 
     @Autowired
     private ScheduleService scheduleService;
@@ -40,7 +42,7 @@ public class ScheduleController {
     public ResponseEntity<ApiResponse> getAllSchedules() {
 
         List<ScheduleDTO> result = scheduleService.getAllSchedules().stream().map(schedule -> scheduleService.mapToDto(schedule))
-                .collect(Collectors.toList());
+                .toList();
 
         if (!result.isEmpty()) {
 
@@ -73,14 +75,14 @@ public class ScheduleController {
 
                 ApiResponse apiResponse = new ApiResponse(
                         Boolean.TRUE,
-                        "successfully retrieved all schedules searched by departure: " + departureCityName + ", arrival: " + arrivalCityName + ", date: " + departureDate + ", flight class: " + flightClass + ", with page = " + page + ", size = " + size + ", sort by " + Arrays.toString(sort),
+                        MESSAGE + departureCityName + ", arrival: " + arrivalCityName + ", date: " + departureDate + ", flight class: " + flightClass + ", with page = " + page + ", size = " + size + ", sort by " + Arrays.toString(sort),
                         result
                 );
 
                 return new ResponseEntity<>(apiResponse, HttpStatus.OK);
             }
 
-            return new ResponseEntity<>(new ApiResponse(Boolean.TRUE, "Flight not found. Please choose another schedule.", result), HttpStatus.OK);
+            return new ResponseEntity<>(new ApiResponse(Boolean.TRUE, WARN, result), HttpStatus.OK);
     }
 
     @GetMapping("/get/all/search/")
@@ -99,14 +101,14 @@ public class ScheduleController {
 
             ApiResponse apiResponse = new ApiResponse(
                     Boolean.TRUE,
-                    "successfully retrieved all schedules searched by departure: " + departureCityName + ", arrival: " + arrivalCityName + ", date: " + departureDate + ", with page = " + page + ", size = " + size + ", sort by " + Arrays.toString(sort),
+                    MESSAGE + departureCityName + ", arrival: " + arrivalCityName + ", date: " + departureDate + ", with page = " + page + ", size = " + size + ", sort by " + Arrays.toString(sort),
                     result
             );
 
             return new ResponseEntity<>(apiResponse, HttpStatus.OK);
         }
 
-        return new ResponseEntity<>(new ApiResponse(Boolean.TRUE, "Flight not found. Please choose another schedule.", result), HttpStatus.OK);
+        return new ResponseEntity<>(new ApiResponse(Boolean.TRUE, WARN, result), HttpStatus.OK);
     }
 
     @GetMapping("/get/all/filter/time")
@@ -127,14 +129,14 @@ public class ScheduleController {
 
             ApiResponse apiResponse = new ApiResponse(
                     Boolean.TRUE,
-                    "successfully retrieved all schedules searched by departure: " + departureCityName + ", arrival: " + arrivalCityName + ", date: " + departureDate + ", flight class: " + flightClass + ", filtered by time range type: " + timeRange + ", with page = " + page + ", size = " + size + ", sort by " + Arrays.toString(sort),
+                    MESSAGE + departureCityName + ", arrival: " + arrivalCityName + ", date: " + departureDate + ", flight class: " + flightClass + ", filtered by time range type: " + timeRange + ", with page = " + page + ", size = " + size + ", sort by " + Arrays.toString(sort),
                     result
             );
 
             return new ResponseEntity<>(apiResponse, HttpStatus.OK);
         }
 
-        return new ResponseEntity<>(new ApiResponse(Boolean.TRUE, "Flight not found. Please choose another schedule.", result), HttpStatus.OK);
+        return new ResponseEntity<>(new ApiResponse(Boolean.TRUE, WARN, result), HttpStatus.OK);
     }
 
     @GetMapping("/get/{id}")
